crates/macros/tests/ui/fail/generic_method.rs
#[fittings::service]
trait GenericMethodService {
    async fn hello<T>(&self, params: T) -> Result<(), fittings::FittingsError>;
}

fn main() {}
